# Pitching_analysis-Shohei_Ohtani-

./: pyproject.toml
0_data/: trackmandata_columns_explanation.csv
1_main/1_base_model/: base_model.ipynb
1_main/1_base_model/make_data_for_basemodel/: EDA.ipynb  make_data.ipynb  maked_data.csv
1_main/2_main_model/: main_model.ipynb
1_main/2_main_model/make_data_for_mainmodel/: make_data.ipynb  maked_data.csv
1_main/optuna/: optuna_2018.ipynb  optuna_2021.ipynb  optuna_2022.ipynb  optuna_2023.ipynb  optuna_all_data.ipynb
1_main/optuna/make_data_for_mainmodel/: make_data.ipynb
main/base_model/: base_model.ipynb
main/base_model/make_data/: EDA.ipynb  make_data.ipynb  maked_data.csv
