[project]
name = "baseball"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki-etu", email = "yuki.abcba369@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.4",
    "scikit-learn>=1.4.1.post1",
    "lightgbm>=4.3.0",
    "japanize-matplotlib>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/baseball"]
